# Hachimi

./: .gitignore  Makefile  README.md  debug_import.py  requirements-dev.txt  requirements.txt  setup.py  test_debug_sync.py  test_debug_sync_fixed.py  tragger.py
examples/: basic_usage.py
result/: encode.txt
src/: FileProProcessRunner.cpp  MainProcess.py  __init__.py  demo.sln  demo.vcxproj  main.cpp  mian.cpp
src/Config/: Config.py
src/CppCode/: ha.sln  ha.vcxproj  ha.vcxproj.filters  main.cpp  pathGet.cpp  pathGet.h
src/CppCode/ha/x64/Debug/: ha.exe.recipe  ha.ilk  ha.vcxproj.FileListAbsolute.txt  vc143.idb
src/CppCode/ha/x64/Debug/ha.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  ha.lastbuildstate  ha.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/CppCode/ha/x64/Release/: ha.dll.recipe  ha.exe.recipe  ha.vcxproj.FileListAbsolute.txt
src/CppCode/ha/x64/Release/ha.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ha.lastbuildstate  ha.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/Decorator/: Decorator.py
src/EncodeAndDecode/: Decode.py  Encode.py
src/GetFilepath/: GetFile.py
src/HexConvert/: HexConverter.py
src/HexToHachimi/: HexToHachimi.py  __init__.py
src/PreProcess/: FilePreProcess.py  FilePreProcessRunner.py
src/cpp/: CMakeLists.txt
src/cpp/include/: hachimi_core.h
src/cpp/src/: hachimi_core.cpp  python_binding.cpp
src/demo/x64/Debug/: demo.exe.recipe  demo.ilk  vc143.idb
src/demo/x64/Debug/demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/python/: FilePreProcess.py  FilePreProcessRunner.py  __init__.py
src/python/hachimi/: __init__.py  crypto.py
src/x64/: Debug.rar
temp/: encode.txt  hachimi.txt
tests/: benchmark.py  test_crypto.py
